--- a/TODO.org
+++ b/TODO.org
@@ -14,72 +14,72 @@ These are roughly in order of descending priority:
 
 * Issue priority
 
-1. #172 Tracking for Flathub package enhancement
-2. #235 Can't pull from untrusted non-gpg verified remote
-3. #247 Opening X11 apps from Flatpak fails silently bug
-4. #206 flatpak can't open local .flatpakref files bug
-5. #213 Flatpak builds failing 
-6. #220 Add an option to trash user data when uninstalling apps. enhancement help wanted
-7. #97  On KDE,can't edit permissions if Flatseal is not installed bug
-8. #211 Option to filter apps with EOL runtimes enhancement
-9. #125 Show "Installed Size" and "User Data" in Installed tab
-10. #178 Add feature: Automatic search when typing in the main store's page enhancement
-11. #169 Add a tab where user can view all apps that can be updated instead of being prompted immediately when opening Bazaar enhancement
-12. #242 Pressing the esc key while in the search page should exist the search page. enhancement
-13. #117 Format app description text enhancement
-14. #116 Add functionaly to browse apps by category enhancement
-15. #152 Versions list of the app: Show change log for the latest version, let us click and expand older changelogs enhancement
-16. #118 Carve out a section for GNOME/KDE in the curated banners enhancement
-17. #87  Show Flatpak permissions before installing enhancement
-18. #155 Idea: make every app "box" get very slightly tinted by its own icon primary color enhancement
-19. #208 Many apps are still missing names and descriptions bug
-20. #244 UI suggestion for hover menu on images enhancement
-21. #153 Let us click on the developer name (already in blue, make it a link) and show a list of all apps by that developer enhancement
-22. #151 On KDE apps menu/search, we need the right click > uninstall/manage app that we had with Discover enhancement
-23. #190 Hide suggestions for apps that are already installed in plasma search enhancement
-24. #248 Doesn't run in Builder bug
-25. #99  Controller/GamePad scrolling doesen't work in the "Curated" page bug
-26. #98  Mouse 4 & 5 controls enhancement
-27. #133 The pt_BR.po file generated seems to have invalid UTF-8 characters, not allowing it to be opened on Zed Editor or Poedit. bug translations
-28. #191 Add swipe to go back functionality in app pages enhancement
-29. #232 Suggestion: Make Bazaar refresh and cache in the background on startup so its always ready to present itself enhancement
-30. #158 Add a menu/section to manage flatpak repos/sources. enhancement
-31. #163 Add the Flathub link to the share box enhancement
-32. #207 Store page and download size for apps do not include runtimes enhancement
-33. #154 Improve Install Popup with Intuitive Channel Selection and OS Maintainer Overrides enhancement
-34. #136 List source under install/start button when available from multiple repos enhancement
-35. #124 Center images vertically when only one is available bug
-36. #243 Option to bring back icons in search enhancement
-37. #179 Keep the header menu when searching enhancement
-38. #114 Change 'Flathub' tab name to 'Explore' enhancement
-39. #230 Middle tab flathub name seems redundant and should be renamed.
-40. #112 App details might need larger margins enhancement
-41. #111 Verified checkmark is low contrast bug
-42. #82  Shorten maximum length of search field text enhancement
-43. #166 Weblate as an alternative for translation translations
-44. #109 aur enhancement help wanted
+1. [[https://www.github.com/kolunmi/bazaar/issues/172][#172]] Tracking for Flathub package enhancement
+2. [[https://www.github.com/kolunmi/bazaar/issues/235][#235]] Can't pull from untrusted non-gpg verified remote
+3. [[https://www.github.com/kolunmi/bazaar/issues/247][#247]] Opening X11 apps from Flatpak fails silently bug
+4. [[https://www.github.com/kolunmi/bazaar/issues/206][#206]] flatpak can't open local .flatpakref files bug
+5. [[https://www.github.com/kolunmi/bazaar/issues/213][#213]] Flatpak builds failing 
+6. [[https://www.github.com/kolunmi/bazaar/issues/220][#220]] Add an option to trash user data when uninstalling apps. enhancement help wanted
+7. [[https://www.github.com/kolunmi/bazaar/issues/97][#97 ]] On KDE,can't edit permissions if Flatseal is not installed bug
+8. [[https://www.github.com/kolunmi/bazaar/issues/211][#211]] Option to filter apps with EOL runtimes enhancement
+9. [[https://www.github.com/kolunmi/bazaar/issues/125][#125]] Show "Installed Size" and "User Data" in Installed tab
+10. [[https://www.github.com/kolunmi/bazaar/issues/178][#178]] Add feature: Automatic search when typing in the main store's page enhancement
+11. [[https://www.github.com/kolunmi/bazaar/issues/169][#169]] Add a tab where user can view all apps that can be updated instead of being prompted immediately when opening Bazaar enhancement
+12. [[https://www.github.com/kolunmi/bazaar/issues/242][#242]] Pressing the esc key while in the search page should exist the search page. enhancement
+13. [[https://www.github.com/kolunmi/bazaar/issues/117][#117]] Format app description text enhancement
+14. [[https://www.github.com/kolunmi/bazaar/issues/116][#116]] Add functionaly to browse apps by category enhancement
+15. [[https://www.github.com/kolunmi/bazaar/issues/152][#152]] Versions list of the app: Show change log for the latest version, let us click and expand older changelogs enhancement
+16. [[https://www.github.com/kolunmi/bazaar/issues/118][#118]] Carve out a section for GNOME/KDE in the curated banners enhancement
+17. [[https://www.github.com/kolunmi/bazaar/issues/87][#87 ]] Show Flatpak permissions before installing enhancement
+18. [[https://www.github.com/kolunmi/bazaar/issues/155][#155]] Idea: make every app "box" get very slightly tinted by its own icon primary color enhancement
+19. [[https://www.github.com/kolunmi/bazaar/issues/208][#208]] Many apps are still missing names and descriptions bug
+20. [[https://www.github.com/kolunmi/bazaar/issues/244][#244]] UI suggestion for hover menu on images enhancement
+21. [[https://www.github.com/kolunmi/bazaar/issues/153][#153]] Let us click on the developer name (already in blue, make it a link) and show a list of all apps by that developer enhancement
+22. [[https://www.github.com/kolunmi/bazaar/issues/151][#151]] On KDE apps menu/search, we need the right click > uninstall/manage app that we had with Discover enhancement
+23. [[https://www.github.com/kolunmi/bazaar/issues/190][#190]] Hide suggestions for apps that are already installed in plasma search enhancement
+24. [[https://www.github.com/kolunmi/bazaar/issues/248][#248]] Doesn't run in Builder bug
+25. [[https://www.github.com/kolunmi/bazaar/issues/99][#99 ]] Controller/GamePad scrolling doesen't work in the "Curated" page bug
+26. [[https://www.github.com/kolunmi/bazaar/issues/98][#98 ]] Mouse 4 & 5 controls enhancement
+27. [[https://www.github.com/kolunmi/bazaar/issues/133][#133]] The pt_BR.po file generated seems to have invalid UTF-8 characters, not allowing it to be opened on Zed Editor or Poedit. bug translations
+28. [[https://www.github.com/kolunmi/bazaar/issues/191][#191]] Add swipe to go back functionality in app pages enhancement
+29. [[https://www.github.com/kolunmi/bazaar/issues/232][#232]] Suggestion: Make Bazaar refresh and cache in the background on startup so its always ready to present itself enhancement
+30. [[https://www.github.com/kolunmi/bazaar/issues/158][#158]] Add a menu/section to manage flatpak repos/sources. enhancement
+31. [[https://www.github.com/kolunmi/bazaar/issues/163][#163]] Add the Flathub link to the share box enhancement
+32. [[https://www.github.com/kolunmi/bazaar/issues/207][#207]] Store page and download size for apps do not include runtimes enhancement
+33. [[https://www.github.com/kolunmi/bazaar/issues/154][#154]] Improve Install Popup with Intuitive Channel Selection and OS Maintainer Overrides enhancement
+34. [[https://www.github.com/kolunmi/bazaar/issues/136][#136]] List source under install/start button when available from multiple repos enhancement
+35. [[https://www.github.com/kolunmi/bazaar/issues/124][#124]] Center images vertically when only one is available bug
+36. [[https://www.github.com/kolunmi/bazaar/issues/243][#243]] Option to bring back icons in search enhancement
+37. [[https://www.github.com/kolunmi/bazaar/issues/179][#179]] Keep the header menu when searching enhancement
+38. [[https://www.github.com/kolunmi/bazaar/issues/114][#114]] Change 'Flathub' tab name to 'Explore' enhancement
+39. [[https://www.github.com/kolunmi/bazaar/issues/230][#230]] Middle tab flathub name seems redundant and should be renamed.
+40. [[https://www.github.com/kolunmi/bazaar/issues/112][#112]] App details might need larger margins enhancement
+41. [[https://www.github.com/kolunmi/bazaar/issues/111][#111]] Verified checkmark is low contrast bug
+42. [[https://www.github.com/kolunmi/bazaar/issues/82][#82 ]] Shorten maximum length of search field text enhancement
+43. [[https://www.github.com/kolunmi/bazaar/issues/166][#166]] Weblate as an alternative for translation translations
+44. [[https://www.github.com/kolunmi/bazaar/issues/109][#109]] aur enhancement help wanted
 
 ** Currently unsorted
 
-1. #73  Click an app in the list of updates to show the update enhancement
-2. #72  Various Navigation improvements
-3. #71  Some missing UI things
-4. #68  Add "Show Details" option for right-click menu enhancement
-5. #67  Add link to flathub app page enhancement
-6. #66  Navigation shortcuts for going back enhancement
-7. #65  Clean Application Metadata Leftovers After Uninstall enhancement
-8. #64  Add appstream URI handler support enhancement
-9. #63  Simplified CLI App Installation with Common Names enhancement
-10. #62  Simplify the confirmation of instalation enhancement
-11. #61  Add Confirmation Prompt for App Uninstallation enhancement
-12. #60  Add already installed indicator for curated applications enhancement
-13. #57  Adding package availability and origin icons/labels enhancement
-14. #56  Consider Integrating Web App Support To The Curation like stillOS enhancement
-15. #53  compatibility with libadwaita 1.6 enhancement
-16. #50  Seg fault when starting bug
-17. #45  Move refresh progress to the background, let people use current page while waiting until refresh is done enhancement
-18. #40  Add a small parallax effect to the category pictures while scrolling. enhancement
-19. #36  Surface an apps "favorite" button enhancement
-20. #33  Suggestion: Show version number of apps + Show transaction progress as a timeline enhancement
-21. #32  Edit permissions gets "stuck" on Warehouse bug
-22. #23  Different sections in installed list enhancement
+1. [[https://www.github.com/kolunmi/bazaar/issues/73][#73 ]] Click an app in the list of updates to show the update enhancement
+2. [[https://www.github.com/kolunmi/bazaar/issues/72][#72 ]] Various Navigation improvements
+3. [[https://www.github.com/kolunmi/bazaar/issues/71][#71 ]] Some missing UI things
+4. [[https://www.github.com/kolunmi/bazaar/issues/68][#68 ]] Add "Show Details" option for right-click menu enhancement
+5. [[https://www.github.com/kolunmi/bazaar/issues/67][#67 ]] Add link to flathub app page enhancement
+6. [[https://www.github.com/kolunmi/bazaar/issues/66][#66 ]] Navigation shortcuts for going back enhancement
+7. [[https://www.github.com/kolunmi/bazaar/issues/65][#65 ]] Clean Application Metadata Leftovers After Uninstall enhancement
+8. [[https://www.github.com/kolunmi/bazaar/issues/64][#64 ]] Add appstream URI handler support enhancement
+9. [[https://www.github.com/kolunmi/bazaar/issues/63][#63 ]] Simplified CLI App Installation with Common Names enhancement
+10. [[https://www.github.com/kolunmi/bazaar/issues/62][#62 ]] Simplify the confirmation of instalation enhancement
+11. [[https://www.github.com/kolunmi/bazaar/issues/61][#61 ]] Add Confirmation Prompt for App Uninstallation enhancement
+12. [[https://www.github.com/kolunmi/bazaar/issues/60][#60 ]] Add already installed indicator for curated applications enhancement
+13. [[https://www.github.com/kolunmi/bazaar/issues/57][#57 ]] Adding package availability and origin icons/labels enhancement
+14. [[https://www.github.com/kolunmi/bazaar/issues/56][#56 ]] Consider Integrating Web App Support To The Curation like stillOS enhancement
+15. [[https://www.github.com/kolunmi/bazaar/issues/53][#53 ]] compatibility with libadwaita 1.6 enhancement
+16. [[https://www.github.com/kolunmi/bazaar/issues/50][#50 ]] Seg fault when starting bug
+17. [[https://www.github.com/kolunmi/bazaar/issues/45][#45 ]] Move refresh progress to the background, let people use current page while waiting until refresh is done enhancement
+18. [[https://www.github.com/kolunmi/bazaar/issues/40][#40 ]] Add a small parallax effect to the category pictures while scrolling. enhancement
+19. [[https://www.github.com/kolunmi/bazaar/issues/36][#36 ]] Surface an apps "favorite" button enhancement
+20. [[https://www.github.com/kolunmi/bazaar/issues/33][#33 ]] Suggestion: Show version number of apps + Show transaction progress as a timeline enhancement
+21. [[https://www.github.com/kolunmi/bazaar/issues/32][#32 ]] Edit permissions gets "stuck" on Warehouse bug
+22. [[https://www.github.com/kolunmi/bazaar/issues/23][#23 ]] Different sections in installed list enhancement
